// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sample trees (default): 1 1`] = `" (c = 0)"`;

exports[`sample trees (default): 2 1`] = `
"1,2 (c = 50)
.. (c = 0)
..1 (c = 20)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
..2 (c = 30)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
..0,2 (c = 40)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....2 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
..1,0 (c = 30)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0 (c = 10)
...... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
..1,1 (c = 40)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)"
`;

exports[`sample trees (default): 3 1`] = `" (c = 0)"`;

exports[`sample trees (default): 4 1`] = `
"1,3,0,1 (c = 90)
..0,1,1,3 (c = 90)
.... (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,1,1 (c = 50)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,1 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,1 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
......1,1 (c = 40)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
........1,0 (c = 30)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)"
`;

exports[`sample trees (default): 5 1`] = `
"1,2 (c = 50)
.. (c = 0)
..1 (c = 20)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
..2 (c = 30)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
..0,2 (c = 40)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....2 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
..1,0 (c = 30)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0 (c = 10)
...... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
..1,1 (c = 40)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)"
`;

exports[`sample trees (default): 6 1`] = `
"0,1,0,0 (c = 50)
..0,0,0,1 (c = 50)
.... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,0,0 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0,1 (c = 40)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0 (c = 10)"
`;

exports[`sample trees (default): 7 1`] = `
"7,0,0,4 (c = 150)
..0,0,4,7 (c = 150)
.... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,0,4 (c = 70)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0 (c = 10)
........ (c = 0)
......4 (c = 50)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........2 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
........3 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
......0,4 (c = 60)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........4 (c = 50)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,2 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........0,0 (c = 20)"
`;

exports[`sample trees (default): 8 1`] = `
"7,8,4,6,8,3,8,6 (c = 580)
..3,4,6,6,7,8,8,8 (c = 580)
.... (c = 0)
....3,4,6,6 (c = 230)
...... (c = 0)
......3,4 (c = 90)
........ (c = 0)
........3 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
........4 (c = 50)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
........0,4 (c = 60)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........4 (c = 50)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
............3 (c = 40)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
..............2 (c = 30)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
................1 (c = 20)
.................. (c = 0)
..................0 (c = 10)
.................... (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,2 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)"
`;

exports[`sample trees (default): 9 1`] = `
"1,8,0,6 (c = 190)
..0,1,6,8 (c = 190)
.... (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,1,6 (c = 100)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,1 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......6 (c = 70)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........3 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
........4 (c = 50)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
........5 (c = 60)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)"
`;

exports[`sample trees (default): 10 1`] = `
"5,9,4,6,4,1,4,9,1,5 (c = 580)
..1,1,4,4,4,5,5,6,9,9 (c = 580)
.... (c = 0)
....1,1,4,4,4 (c = 190)
...... (c = 0)
......1,1 (c = 40)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
........1,0 (c = 30)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
.......... (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
......1,1,4 (c = 90)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........1,1 (c = 40)
.......... (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
..........1,0 (c = 30)
............0,1 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)"
`;

exports[`sample trees (ofMinLength(1)): 1 1`] = `
"2 (c = 11.11111111111111)
..1 (c = 0)"
`;

exports[`sample trees (ofMinLength(1)): 2 1`] = `
"2,3,2 (c = 66.66666666666666)
..2,2,3 (c = 66.66666666666666)
....2 (c = 11.11111111111111)
......1 (c = 0)
....2,2 (c = 33.33333333333333)
......2 (c = 11.11111111111111)
........1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......2,1 (c = 22.22222222222222)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
....2 (c = 11.11111111111111)
......1 (c = 0)
....3 (c = 22.22222222222222)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
....2,3 (c = 44.44444444444444)
......2 (c = 11.11111111111111)
........1 (c = 0)
......3 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
......1,3 (c = 33.33333333333333)
........1 (c = 0)
........3 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
......2,1 (c = 22.22222222222222)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......2,2 (c = 33.33333333333333)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........2,1 (c = 22.22222222222222)
..........1,2 (c = 22.22222222222222)
............1 (c = 0)
............2 (c = 11.11111111111111)
..............1 (c = 0)
............1,1 (c = 11.11111111111111)
..............1 (c = 0)
..............1 (c = 0)
..........1 (c = 0)"
`;

exports[`sample trees (ofMinLength(1)): 3 1`] = `
"4 (c = 33.33333333333333)
..1 (c = 0)
..2 (c = 11.11111111111111)
....1 (c = 0)
..3 (c = 22.22222222222222)
....1 (c = 0)
....2 (c = 11.11111111111111)
......1 (c = 0)"
`;

exports[`sample trees (ofMinLength(1)): 4 1`] = `
"2,4,1,2,1 (c = 100)
..1,1,2,2,4 (c = 100)
....1 (c = 0)
....1,1,2 (c = 33.33333333333333)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,1,1 (c = 22.22222222222222)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1 (c = 0)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
....1,1,2,2 (c = 55.55555555555556)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1,1,2 (c = 33.33333333333333)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........1,1,1 (c = 22.22222222222222)
..........1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
..........1 (c = 0)
..........1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)"
`;

exports[`sample trees (ofMinLength(1)): 5 1`] = `
"2,4,1,2,1 (c = 100)
..1,1,2,2,4 (c = 100)
....1 (c = 0)
....1,1,2 (c = 33.33333333333333)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,1,1 (c = 22.22222222222222)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1 (c = 0)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
....1,1,2,2 (c = 55.55555555555556)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1,1,2 (c = 33.33333333333333)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........1,1,1 (c = 22.22222222222222)
..........1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
..........1 (c = 0)
..........1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)"
`;

exports[`sample trees (ofMinLength(1)): 6 1`] = `
"2,3,5 (c = 100)
..2 (c = 11.11111111111111)
....1 (c = 0)
..2,3 (c = 44.44444444444444)
....2 (c = 11.11111111111111)
......1 (c = 0)
....3 (c = 22.22222222222222)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
....1,3 (c = 33.33333333333333)
......1 (c = 0)
......3 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
....2,1 (c = 22.22222222222222)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
....2,2 (c = 33.33333333333333)
......2 (c = 11.11111111111111)
........1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......2,1 (c = 22.22222222222222)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
..3 (c = 22.22222222222222)
....1 (c = 0)
....2 (c = 11.11111111111111)
......1 (c = 0)
..5 (c = 44.44444444444444)
....1 (c = 0)
....3 (c = 22.22222222222222)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
....4 (c = 33.33333333333333)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......3 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
..2,5 (c = 66.66666666666666)
....2 (c = 11.11111111111111)
......1 (c = 0)
....5 (c = 44.44444444444444)
......1 (c = 0)
......3 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
......4 (c = 33.33333333333333)"
`;

exports[`sample trees (ofMinLength(1)): 7 1`] = `
"1,2,1,1,4 (c = 88.88888888888889)
..1,1,1,2,4 (c = 88.88888888888889)
....1 (c = 0)
....1,1,1 (c = 22.22222222222222)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1 (c = 0)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
....1,1,1,2 (c = 44.44444444444444)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1,1,1 (c = 22.22222222222222)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1 (c = 0)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1 (c = 0)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,1,2 (c = 33.33333333333333)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........1,1,1 (c = 22.22222222222222)
..........1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
..........1 (c = 0)
..........1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)"
`;

exports[`sample trees (ofMinLength(1)): 8 1`] = `
"8,1,1,5,1 (c = 166.66666666666669)
..1,1,1,5,8 (c = 166.66666666666669)
....1 (c = 0)
....1,1,1 (c = 22.22222222222222)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1 (c = 0)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
....1,1,1,5 (c = 77.77777777777777)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1,1,1 (c = 22.22222222222222)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1 (c = 0)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1 (c = 0)
......1 (c = 0)
......5 (c = 44.44444444444444)
........1 (c = 0)
........3 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
........4 (c = 33.33333333333333)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........3 (c = 22.22222222222222)
............1 (c = 0)
............2 (c = 11.11111111111111)
..............1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1,5 (c = 55.55555555555556)
........1 (c = 0)
........5 (c = 44.44444444444444)
..........1 (c = 0)
..........3 (c = 22.22222222222222)
............1 (c = 0)
............2 (c = 11.11111111111111)
..............1 (c = 0)
..........4 (c = 33.33333333333333)
............1 (c = 0)
............2 (c = 11.11111111111111)
..............1 (c = 0)
............3 (c = 22.22222222222222)
..............1 (c = 0)
..............2 (c = 11.11111111111111)
................1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1,3 (c = 33.33333333333333)
..........1 (c = 0)
..........3 (c = 22.22222222222222)
............1 (c = 0)
............2 (c = 11.11111111111111)
..............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
..........1,2 (c = 22.22222222222222)
............1 (c = 0)
............2 (c = 11.11111111111111)
..............1 (c = 0)
............1,1 (c = 11.11111111111111)
..............1 (c = 0)
..............1 (c = 0)
........1,4 (c = 44.44444444444444)
..........1 (c = 0)
..........4 (c = 33.33333333333333)
............1 (c = 0)
............2 (c = 11.11111111111111)
..............1 (c = 0)
............3 (c = 22.22222222222222)
..............1 (c = 0)
..............2 (c = 11.11111111111111)
................1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)"
`;

exports[`sample trees (ofMinLength(1)): 9 1`] = `
"8,9,5,7,9,4,9,7,9 (c = 733.3333333333333)
..4,5,7,7,8,9,9,9,9 (c = 733.3333333333334)
....4 (c = 33.33333333333333)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......3 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
....4,5,7,7,8 (c = 333.3333333333333)
......4 (c = 33.33333333333333)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........3 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
......4,5,7 (c = 166.66666666666666)
........4 (c = 33.33333333333333)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........3 (c = 22.22222222222222)
............1 (c = 0)
............2 (c = 11.11111111111111)
..............1 (c = 0)
........4,5 (c = 88.88888888888889)
..........4 (c = 33.33333333333333)
............1 (c = 0)
............2 (c = 11.11111111111111)
..............1 (c = 0)
............3 (c = 22.22222222222222)
..............1 (c = 0)
..............2 (c = 11.11111111111111)
................1 (c = 0)
..........5 (c = 44.44444444444444)
............1 (c = 0)
............3 (c = 22.22222222222222)
..............1 (c = 0)
..............2 (c = 11.11111111111111)
................1 (c = 0)
............4 (c = 33.33333333333333)
..............1 (c = 0)
..............2 (c = 11.11111111111111)
................1 (c = 0)
..............3 (c = 22.22222222222222)
................1 (c = 0)
................2 (c = 11.11111111111111)
..................1 (c = 0)
..........1,5 (c = 55.55555555555556)
............1 (c = 0)
............5 (c = 44.44444444444444)
..............1 (c = 0)
..............3 (c = 22.22222222222222)
................1 (c = 0)
................2 (c = 11.11111111111111)
..................1 (c = 0)
..............4 (c = 33.33333333333333)
................1 (c = 0)
................2 (c = 11.11111111111111)
..................1 (c = 0)
................3 (c = 22.22222222222222)
..................1 (c = 0)
..................2 (c = 11.11111111111111)
....................1 (c = 0)
............1,1 (c = 11.11111111111111)
..............1 (c = 0)
..............1 (c = 0)
............1,3 (c = 33.33333333333333)
..............1 (c = 0)
..............3 (c = 22.22222222222222)
................1 (c = 0)
................2 (c = 11.11111111111111)
..................1 (c = 0)
..............1,1 (c = 11.11111111111111)
................1 (c = 0)
................1 (c = 0)
..............1,2 (c = 22.22222222222222)
................1 (c = 0)
................2 (c = 11.11111111111111)
..................1 (c = 0)
................1,1 (c = 11.11111111111111)
..................1 (c = 0)
..................1 (c = 0)
............1,4 (c = 44.44444444444444)
..............1 (c = 0)
..............4 (c = 33.33333333333333)
................1 (c = 0)
................2 (c = 11.11111111111111)
..................1 (c = 0)
................3 (c = 22.22222222222222)
..................1 (c = 0)
..................2 (c = 11.11111111111111)
....................1 (c = 0)
..............1,1 (c = 11.11111111111111)
................1 (c = 0)
................1 (c = 0)
..............1,2 (c = 22.22222222222222)"
`;

exports[`sample trees (ofMinLength(1)): 10 1`] = `
"2,9,1,7,1 (c = 211.11111111111111)
..1,1,2,7,9 (c = 211.1111111111111)
....1 (c = 0)
....1,1,2 (c = 33.33333333333333)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,2 (c = 22.22222222222222)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
......1,1,1 (c = 22.22222222222222)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1 (c = 0)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
....1,1,2,7 (c = 111.1111111111111)
......1 (c = 0)
......1,1 (c = 11.11111111111111)
........1 (c = 0)
........1 (c = 0)
......1,1,2 (c = 33.33333333333333)
........1 (c = 0)
........1,1 (c = 11.11111111111111)
..........1 (c = 0)
..........1 (c = 0)
........1 (c = 0)
........2 (c = 11.11111111111111)
..........1 (c = 0)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........1,2 (c = 22.22222222222222)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
........1,1,1 (c = 22.22222222222222)
..........1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
..........1 (c = 0)
..........1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
..........1,1 (c = 11.11111111111111)
............1 (c = 0)
............1 (c = 0)
......1 (c = 0)
......2 (c = 11.11111111111111)
........1 (c = 0)
......7 (c = 66.66666666666666)
........1 (c = 0)
........4 (c = 33.33333333333333)
..........1 (c = 0)
..........2 (c = 11.11111111111111)
............1 (c = 0)
..........3 (c = 22.22222222222222)
............1 (c = 0)
............2 (c = 11.11111111111111)
..............1 (c = 0)
........5 (c = 44.44444444444444)
..........1 (c = 0)
..........3 (c = 22.22222222222222)
............1 (c = 0)
............2 (c = 11.11111111111111)
..............1 (c = 0)
..........4 (c = 33.33333333333333)
............1 (c = 0)
............2 (c = 11.11111111111111)"
`;

exports[`sample trees (ofMinLength(2)): 1 1`] = `
"2,1 (c = 11.11111111111111)
..1,2 (c = 11.11111111111111)
....1,1 (c = 0)
..1,1 (c = 0)"
`;

exports[`sample trees (ofMinLength(2)): 2 1`] = `
"2,3,2,1 (c = 69.44444444444444)
..1,2,2,3 (c = 69.44444444444446)
....1,2 (c = 11.11111111111111)
......1,1 (c = 0)
....1,2,2 (c = 34.72222222222222)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......2,2 (c = 22.22222222222222)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1 (c = 0)
......1,1,2 (c = 23.61111111111111)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
......1,2,1 (c = 23.61111111111111)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1,1 (c = 12.5)
............1,1 (c = 0)
............1,1 (c = 0)
............1,1 (c = 0)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
....1,2 (c = 11.11111111111111)
......1,1 (c = 0)
....1,3 (c = 22.22222222222222)
......1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
....2,2 (c = 22.22222222222222)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......2,1 (c = 11.11111111111111)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1 (c = 0)
....2,3 (c = 33.33333333333333)
......1,3 (c = 22.22222222222222)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
......2,1 (c = 11.11111111111111)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1 (c = 0)
......2,2 (c = 22.22222222222222)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1 (c = 0)
....2,3 (c = 33.33333333333333)
......1,3 (c = 22.22222222222222)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
......2,1 (c = 11.11111111111111)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1 (c = 0)
......2,2 (c = 22.22222222222222)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1 (c = 0)
....1,2,3 (c = 45.83333333333333)
......1,2 (c = 11.11111111111111)"
`;

exports[`sample trees (ofMinLength(2)): 3 1`] = `
"4,1,1,1 (c = 58.33333333333333)
..1,1,1,4 (c = 58.33333333333333)
....1,1 (c = 0)
....1,1,1 (c = 12.5)
......1,1 (c = 0)
......1,1 (c = 0)
......1,1 (c = 0)
....1,1 (c = 0)
....1,4 (c = 33.33333333333333)
......1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,3 (c = 22.22222222222222)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
....1,1 (c = 0)
....1,4 (c = 33.33333333333333)
......1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,3 (c = 22.22222222222222)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
....1,4 (c = 33.33333333333333)
......1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,3 (c = 22.22222222222222)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
....1,1,4 (c = 45.83333333333333)
......1,1 (c = 0)
......1,4 (c = 33.33333333333333)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
......1,4 (c = 33.33333333333333)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
......1,1,1 (c = 12.5)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
......1,1,2 (c = 23.61111111111111)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
......1,1,3 (c = 34.72222222222222)
........1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1,1 (c = 12.5)
............1,1 (c = 0)
............1,1 (c = 0)
............1,1 (c = 0)
....1,1,4 (c = 45.83333333333333)
......1,1 (c = 0)
......1,4 (c = 33.33333333333333)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
......1,4 (c = 33.33333333333333)"
`;

exports[`sample trees (ofMinLength(2)): 4 1`] = `
"2,4 (c = 44.44444444444444)
..1,4 (c = 33.33333333333333)
....1,1 (c = 0)
....1,2 (c = 11.11111111111111)
......1,1 (c = 0)
....1,3 (c = 22.22222222222222)
......1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
..2,1 (c = 11.11111111111111)
....1,2 (c = 11.11111111111111)
......1,1 (c = 0)
....1,1 (c = 0)
..2,2 (c = 22.22222222222222)
....1,2 (c = 11.11111111111111)
......1,1 (c = 0)
....2,1 (c = 11.11111111111111)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,1 (c = 0)
..2,3 (c = 33.33333333333333)
....1,3 (c = 22.22222222222222)
......1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
....2,1 (c = 11.11111111111111)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,1 (c = 0)
....2,2 (c = 22.22222222222222)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......2,1 (c = 11.11111111111111)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1 (c = 0)"
`;

exports[`sample trees (ofMinLength(2)): 5 1`] = `
"2,4,1,2,1,2 (c = 116.66666666666667)
..1,1,2,2,2,4 (c = 116.66666666666667)
....1,1 (c = 0)
....1,1,2,2 (c = 47.22222222222223)
......1,1 (c = 0)
......1,1,2 (c = 23.61111111111111)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......2,2 (c = 22.22222222222222)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1 (c = 0)
......1,1,2 (c = 23.61111111111111)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
......1,2,2 (c = 34.72222222222222)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........2,2 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........2,1 (c = 11.11111111111111)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,1 (c = 0)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1,1 (c = 12.5)
............1,1 (c = 0)
............1,1 (c = 0)
............1,1 (c = 0)
........1,2,1 (c = 23.61111111111111)
..........1,1,2 (c = 23.61111111111111)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,1,1 (c = 12.5)
..............1,1 (c = 0)
..............1,1 (c = 0)
..............1,1 (c = 0)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1 (c = 0)
..........2,1 (c = 11.11111111111111)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,1 (c = 0)
..........1,1,1 (c = 12.5)
............1,1 (c = 0)
............1,1 (c = 0)
............1,1 (c = 0)
......1,2,2 (c = 34.72222222222222)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........2,2 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........2,1 (c = 11.11111111111111)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)"
`;

exports[`sample trees (ofMinLength(2)): 6 1`] = `
"2,3,5,1 (c = 102.77777777777777)
..1,2,3,5 (c = 102.77777777777777)
....1,2 (c = 11.11111111111111)
......1,1 (c = 0)
....1,2,3 (c = 45.83333333333333)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,3 (c = 22.22222222222222)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
......2,3 (c = 33.33333333333333)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
........2,1 (c = 11.11111111111111)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1 (c = 0)
........2,2 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........2,1 (c = 11.11111111111111)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,1 (c = 0)
......1,1,3 (c = 34.72222222222222)
........1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1,1 (c = 12.5)
............1,1 (c = 0)
............1,1 (c = 0)
............1,1 (c = 0)
......1,2,1 (c = 23.61111111111111)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1,1 (c = 12.5)
............1,1 (c = 0)
............1,1 (c = 0)
............1,1 (c = 0)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1 (c = 0)
........2,1 (c = 11.11111111111111)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
......1,2,2 (c = 34.72222222222222)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........2,2 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........2,1 (c = 11.11111111111111)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,1 (c = 0)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1,1 (c = 12.5)
............1,1 (c = 0)
............1,1 (c = 0)
............1,1 (c = 0)"
`;

exports[`sample trees (ofMinLength(2)): 7 1`] = `
"1,2,1,1,4,1 (c = 94.44444444444444)
..1,1,1,1,2,4 (c = 94.44444444444444)
....1,1 (c = 0)
....1,1,1,1 (c = 25)
......1,1 (c = 0)
......1,1,1 (c = 12.5)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
......1,1 (c = 0)
......1,1 (c = 0)
......1,1 (c = 0)
......1,1 (c = 0)
......1,1 (c = 0)
......1,1,1 (c = 12.5)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
......1,1,1 (c = 12.5)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
......1,1,1 (c = 12.5)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
....1,1,1,1,2 (c = 48.611111111111114)
......1,1 (c = 0)
......1,1,1 (c = 12.5)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
......1,1,1,1 (c = 25)
........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
......1,1 (c = 0)
......1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,1 (c = 0)
......1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,2 (c = 11.11111111111111)
........1,1 (c = 0)
......1,1,1 (c = 12.5)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
......1,1,2 (c = 23.61111111111111)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
......1,1,1 (c = 12.5)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
......1,1,2 (c = 23.61111111111111)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
......1,1,2 (c = 23.61111111111111)
........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)"
`;

exports[`sample trees (ofMinLength(2)): 8 1`] = `
"8,1,1,5,1,6 (c = 227.77777777777777)
..1,1,1,5,6,8 (c = 227.77777777777777)
....1,1 (c = 0)
....1,1,1,5 (c = 69.44444444444444)
......1,1 (c = 0)
......1,1,1 (c = 12.5)
........1,1 (c = 0)
........1,1 (c = 0)
........1,1 (c = 0)
......1,1 (c = 0)
......1,5 (c = 44.44444444444444)
........1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
........1,4 (c = 33.33333333333333)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,3 (c = 22.22222222222222)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
......1,1 (c = 0)
......1,5 (c = 44.44444444444444)
........1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
........1,4 (c = 33.33333333333333)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,3 (c = 22.22222222222222)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
......1,5 (c = 44.44444444444444)
........1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
........1,4 (c = 33.33333333333333)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,3 (c = 22.22222222222222)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
......1,1,5 (c = 56.94444444444444)
........1,1 (c = 0)
........1,5 (c = 44.44444444444444)
..........1,1 (c = 0)
..........1,3 (c = 22.22222222222222)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
..........1,4 (c = 33.33333333333333)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,3 (c = 22.22222222222222)
..............1,1 (c = 0)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
........1,5 (c = 44.44444444444444)
..........1,1 (c = 0)
..........1,3 (c = 22.22222222222222)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
..........1,4 (c = 33.33333333333333)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,3 (c = 22.22222222222222)
..............1,1 (c = 0)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
........1,1,1 (c = 12.5)
..........1,1 (c = 0)
..........1,1 (c = 0)
..........1,1 (c = 0)
........1,1,3 (c = 34.72222222222222)
..........1,1 (c = 0)
..........1,3 (c = 22.22222222222222)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
..........1,3 (c = 22.22222222222222)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
..........1,1,1 (c = 12.5)
............1,1 (c = 0)
............1,1 (c = 0)"
`;

exports[`sample trees (ofMinLength(2)): 9 1`] = `
"8,9,5,7,9,4 (c = 450.00000000000006)
..4,5,7,8,9,9 (c = 450)
....4,5 (c = 77.77777777777777)
......1,5 (c = 44.44444444444444)
........1,1 (c = 0)
........1,3 (c = 22.22222222222222)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
........1,4 (c = 33.33333333333333)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,3 (c = 22.22222222222222)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
......2,5 (c = 55.55555555555556)
........1,5 (c = 44.44444444444444)
..........1,1 (c = 0)
..........1,3 (c = 22.22222222222222)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
..........1,4 (c = 33.33333333333333)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,3 (c = 22.22222222222222)
..............1,1 (c = 0)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
........2,1 (c = 11.11111111111111)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1 (c = 0)
........2,3 (c = 33.33333333333333)
..........1,3 (c = 22.22222222222222)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
..........2,1 (c = 11.11111111111111)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,1 (c = 0)
..........2,2 (c = 22.22222222222222)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
..............1,1 (c = 0)
........2,4 (c = 44.44444444444444)
..........1,4 (c = 33.33333333333333)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,3 (c = 22.22222222222222)
..............1,1 (c = 0)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
..........2,1 (c = 11.11111111111111)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,1 (c = 0)
..........2,2 (c = 22.22222222222222)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
..............1,1 (c = 0)
..........2,3 (c = 33.33333333333333)
............1,3 (c = 22.22222222222222)
..............1,1 (c = 0)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
..............1,1 (c = 0)
............2,2 (c = 22.22222222222222)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
..............2,1 (c = 11.11111111111111)
................1,2 (c = 11.11111111111111)
..................1,1 (c = 0)
................1,1 (c = 0)
......3,5 (c = 66.66666666666666)
........1,5 (c = 44.44444444444444)
..........1,1 (c = 0)
..........1,3 (c = 22.22222222222222)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
..........1,4 (c = 33.33333333333333)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,3 (c = 22.22222222222222)"
`;

exports[`sample trees (ofMinLength(2)): 10 1`] = `
"2,9,1,7,1,2,7,7,7,7 (c = 544.4444444444442)
..1,1,2,2,7,7,7,7,7,9 (c = 544.4444444444443)
....1,1 (c = 0)
....1,1,2,2,7,7 (c = 205.55555555555554)
......1,1 (c = 0)
......1,1,2,2 (c = 47.22222222222223)
........1,1 (c = 0)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1,1 (c = 12.5)
............1,1 (c = 0)
............1,1 (c = 0)
............1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........1,2 (c = 11.11111111111111)
..........1,1 (c = 0)
........2,2 (c = 22.22222222222222)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........2,1 (c = 11.11111111111111)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,1 (c = 0)
........1,1,2 (c = 23.61111111111111)
..........1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,1,1 (c = 12.5)
............1,1 (c = 0)
............1,1 (c = 0)
............1,1 (c = 0)
........1,2,2 (c = 34.72222222222222)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........2,2 (c = 22.22222222222222)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
..............1,1 (c = 0)
..........1,1,2 (c = 23.61111111111111)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,1,1 (c = 12.5)
..............1,1 (c = 0)
..............1,1 (c = 0)
..............1,1 (c = 0)
..........1,2,1 (c = 23.61111111111111)
............1,1,2 (c = 23.61111111111111)
..............1,1 (c = 0)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
..............1,1,1 (c = 12.5)
................1,1 (c = 0)
................1,1 (c = 0)
................1,1 (c = 0)
............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............1,1 (c = 0)
............2,1 (c = 11.11111111111111)
..............1,2 (c = 11.11111111111111)
................1,1 (c = 0)
..............1,1 (c = 0)
............1,1,1 (c = 12.5)
..............1,1 (c = 0)
..............1,1 (c = 0)
..............1,1 (c = 0)
........1,2,2 (c = 34.72222222222222)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........1,2 (c = 11.11111111111111)
............1,1 (c = 0)
..........2,2 (c = 22.22222222222222)
............1,2 (c = 11.11111111111111)
..............1,1 (c = 0)
............2,1 (c = 11.11111111111111)"
`;

exports[`sample values: 1 1`] = `
Array [
  Array [],
  Array [
    0,
  ],
  Array [],
  Array [],
  Array [],
  Array [
    0,
  ],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`sample values: 2 1`] = `
Array [
  Array [
    1,
    2,
  ],
  Array [
    0,
  ],
  Array [
    0,
    2,
  ],
  Array [],
  Array [
    1,
    1,
  ],
  Array [
    0,
  ],
  Array [],
  Array [
    2,
  ],
  Array [
    2,
  ],
  Array [
    2,
    2,
  ],
]
`;

exports[`sample values: 3 1`] = `
Array [
  Array [],
  Array [
    0,
    0,
    0,
  ],
  Array [],
  Array [
    0,
  ],
  Array [],
  Array [
    0,
    0,
  ],
  Array [
    1,
    0,
    0,
  ],
  Array [],
  Array [],
  Array [
    2,
  ],
]
`;

exports[`sample values: 4 1`] = `
Array [
  Array [
    1,
    3,
    0,
    1,
  ],
  Array [],
  Array [
    1,
  ],
  Array [
    1,
  ],
  Array [
    1,
  ],
  Array [
    2,
    4,
  ],
  Array [
    4,
    1,
    1,
  ],
  Array [],
  Array [
    4,
  ],
  Array [
    3,
    4,
  ],
]
`;

exports[`sample values: 5 1`] = `
Array [
  Array [
    1,
    2,
  ],
  Array [
    0,
    2,
    3,
    2,
  ],
  Array [],
  Array [
    4,
    4,
  ],
  Array [
    3,
  ],
  Array [],
  Array [
    2,
    4,
    5,
    2,
  ],
  Array [
    2,
    1,
    2,
    3,
    5,
  ],
  Array [
    4,
    3,
    1,
    3,
  ],
  Array [
    3,
    0,
    5,
  ],
]
`;

exports[`sample values: 6 1`] = `
Array [
  Array [
    0,
    1,
    0,
    0,
  ],
  Array [
    0,
    4,
    1,
  ],
  Array [
    5,
  ],
  Array [
    1,
    1,
  ],
  Array [
    1,
    1,
    4,
    5,
    5,
  ],
  Array [
    3,
  ],
  Array [
    6,
    0,
    2,
    0,
    3,
  ],
  Array [
    0,
    0,
  ],
  Array [
    6,
    5,
    5,
    3,
    6,
    6,
  ],
  Array [
    2,
    1,
    2,
  ],
]
`;

exports[`sample values: 7 1`] = `
Array [
  Array [
    7,
    0,
    0,
    4,
  ],
  Array [],
  Array [
    0,
    0,
    2,
    0,
    4,
  ],
  Array [
    1,
    4,
    0,
  ],
  Array [
    4,
    5,
    2,
    5,
  ],
  Array [
    1,
    0,
    3,
    5,
  ],
  Array [],
  Array [
    1,
    3,
    3,
    1,
  ],
  Array [
    4,
  ],
  Array [
    3,
  ],
]
`;

exports[`sample values: 8 1`] = `
Array [
  Array [
    7,
    8,
    4,
    6,
    8,
    3,
    8,
    6,
  ],
  Array [
    7,
    1,
    4,
    3,
    0,
    7,
    2,
    4,
  ],
  Array [
    8,
    2,
    8,
    1,
    5,
  ],
  Array [
    2,
    7,
    1,
    6,
    7,
    3,
  ],
  Array [
    0,
    3,
    2,
  ],
  Array [
    5,
    6,
  ],
  Array [
    6,
    7,
    6,
    6,
  ],
  Array [
    5,
    3,
    3,
    2,
    5,
  ],
  Array [
    8,
  ],
  Array [
    0,
    7,
  ],
]
`;

exports[`sample values: 9 1`] = `
Array [
  Array [
    1,
    8,
    0,
    6,
  ],
  Array [],
  Array [
    6,
  ],
  Array [
    6,
    6,
    6,
    7,
    7,
    4,
  ],
  Array [
    4,
    6,
    1,
    0,
    1,
    4,
    7,
    8,
  ],
  Array [
    5,
    4,
    4,
    5,
    5,
    7,
    5,
    5,
    8,
  ],
  Array [
    3,
    2,
    1,
    1,
    6,
  ],
  Array [
    4,
    6,
    2,
    7,
    7,
    8,
    4,
    4,
  ],
  Array [
    6,
    4,
    7,
    7,
  ],
  Array [
    1,
    2,
    0,
    6,
  ],
]
`;

exports[`sample values: 10 1`] = `
Array [
  Array [
    5,
    9,
    4,
    6,
    4,
    1,
    4,
    9,
    1,
    5,
  ],
  Array [
    6,
    1,
    7,
    6,
    5,
    9,
  ],
  Array [
    8,
    1,
    0,
    7,
    6,
    8,
  ],
  Array [
    0,
    4,
    0,
    0,
    2,
  ],
  Array [
    6,
    10,
  ],
  Array [
    1,
    3,
    7,
    8,
    6,
    3,
    3,
    2,
  ],
  Array [
    5,
    10,
  ],
  Array [
    6,
    0,
    1,
    1,
    1,
    6,
    10,
    8,
    7,
  ],
  Array [
    0,
    8,
    1,
  ],
  Array [
    7,
    3,
    7,
    0,
    4,
    1,
    5,
    8,
    4,
    2,
  ],
]
`;
